# deep-learning

./: .gitignore  README.md
autodiff/: README.md  main.py  pyproject.toml
autodiff/src/autodiff/: graph.py  neuron.py  node.py  pytorch_example.py
micrograd/: README.md  computational_graph  graph.py  main.py  node.py  pyproject.toml
micrograd-pytorch/: main.py  neuron.py  pyproject.toml
micrograd/src/micrograd/: neuron.py  node.py  pytorch_example.py
spoticore/: pyproject.toml
spoticore/src/spoticore/: bigram.py  bigram_to_nn.py  constants.py  mlp.ipynb  mlp.py  mlp_colab.ipynb  nn.py  reader.py  spoticore_p2.ipynb
