[project]
name = "micrograd-pytorch"
version = "0.1.0"
description = "micrograd implementation in pytorch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.0.0",
    "micrograd @ file:///home/vihanga/Documents/deep-learning/micrograd"
]

[tool.setuptools]
py-modules = ["main", "neuron"]